--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         
                         </div>
                         <div class="portfolio-image-container">
-                            <img src="5-51312_samsung-galaxy-note-pro-16-10-aspect-ratio.jpg">
+                            <img src="project.jpeg">
                             <div class="portfolio-details">
                                 <p>
                                     Project Name:  Book my show
